--- a/shop.html
+++ b/shop.html
@@ -3,62 +3,70 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Перфораторы</title>
-	<header>
-		<div class="header-user-block">
-			<div class="container">
-				<a class="logo" href="#">Техномарт</a>
-				<input type="search" name="search" id="search" value="Поиск"><span></span>
-				<a class="bookmarks" href="#">Закладки: <span>0</span></a>
-				<a class="cart" href="#">Корзина: <span>10</span></a>
-				<a class="order" href="#">Оформить заказ</a>
+	<header class="main-header">
+		<div class="container">
+			<a class="logo" href="#">Техномарт</a>
+			<form action="#" class="search-form">
+				<input type="search" class="inp-search" placeholder="Поиск"></form>
+				<button type="submit" class="key-search"></button>
+				<div class="top-menu">
+					<a class="bookmarks" href="#">Закладки: <span>0</span></a>
+					<a class="cart cart-full" href="#">Корзина: <span>10</span></a>
+					<a class="order" href="#">Оформить заказ</a>
+				</div>
 			</div>
 		</div>
-			<div class="header-main">
-				<div class="container">
-					<div class="header-contacts-login">
-						<h2>Интернет-магазин строительных материалов и инструментов для ремонта</h2>
-						<div class="header-contacts">
-							<p>+7 (812) 555-05-55</p>
-							<p>г.Санкт-Петербург,ул.Б.Конюшенная,д19/8
-							</p>
-						</div>
-						<div class="authorized">
-							<p>
-								<a href="profile-page.html">Равшан Джамшутович</a>
-								<a href="log-out.html"></a>
-							</p>
-							<p>
-								<a href="#">Мои заказы</a>
-								<a href="#">Личный кабинет</a>
-							</p>
-						</div>
-					</div>
-					<nav class="header-navigation">
-						<ul>
-							<li class="header-nav"><a href="#">Главная</a></li>
-							<li class="header-nav">><a href="#">Компания</a></li>
-							<li class="header-nav">><a href="#">Каталог</a></li>
-							<li class="header-nav">><a href="#">Новости</a></li>
-							<li class="header-nav">><a href="#">Спецпредложения</a></li>
-							<li class="header-nav">><a href="#">Доставка</a></li>
-							<li class="header-nav">><a href="#">Контакты</a></li>
-						</ul>
-					</nav>
-				</div>
-			</div>
-		</header>
-		<div class="index-content">
+		<div class="header-main">
 			<div class="container">
-				<div class="breadcrumbs-nav">
-					<a class="home-icon" href="index.html"></a>
-					<span><a href="#">Каталог</a></span>
-					<span><a href="#">Инструмент</a></span>
-					<span><a class="breadcrumb-disabled" href="#">Перфораторы</a></span>
+				<div class="header-contacts-login">
+					<h2>Интернет-магазин строительных материалов и инструментов для ремонта</h2>
+					<div class="header-contacts">
+						<p>+7 (812) 555-05-55</p>
+						<p>г.Санкт-Петербург,ул.Б.Конюшенная,д19/8
+						</p>
+					</div>
+					<div class="authorized">
+						<p>
+							<a href="profile-page.html">Равшан Джамшутович</a>
+							<a href="log-out.html"></a>
+						</p>
+						<p>
+							<a href="#">Мои заказы</a>
+							<a href="#">Личный кабинет</a>
+						</p>
+					</div>
 				</div>
-				<h1>Перфораторы</h1>
-				<div class="filters-catalog-container">
-					<div class="filters" >
-						<p>Фильтр:</p>
+				<nav class="header-navigation">
+					<ul>
+						<li><a href="#">Главная</a></li>
+						<li><a href="#">Компания</a></li>
+						<li><a href="#">Каталог</a></li>
+						<li><a href="#">Новости</a></li>
+						<li><a href="#">Спецпредложения</a></li>
+						<li><a href="#">Доставка</a></li>
+						<li><a href="#">Контакты</a></li>
+					</ul>
+				</nav>
+			</div>
+		</div>
+	</header>
+	<div class="index-content">
+		<div class="container">
+			<ul class="breadcrumbs">
+				<li><a class="home-icon" href="index.html"></li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Инструмент</a></li>
+				<li><a class="breadcrumb-disabled" href="#">Перфораторы</a></li>
+			</ul>
+			<section class="section">
+				<div class="selection-header">
+					<h3 class="section-title">Перфораторы</h3>
+				</div>
+				<div class="catalog">
+					<div class="catalog-left" >
+						<div class="catalog-top">
+							<span class="catalog-title">Фильтр:</span>
+						</div>
 						<form>
 							<div class="price-range">
 								<h2>Цена:</h2>
@@ -71,47 +79,37 @@
 									<div class="toggle max-toggle">
 									</div>
 								</div>
-								<div class="price-controls">
+								<div class="filter-block">
 									<p><input class="min-price" type="text" id="min-price" value="0"><span></span><input class="max-price" type="text" id="max-price" value="30 000"></p>
 								</div>
 							</div>
-							<fieldset class="main-brands">
-								<h2>Производители:</h2>
-								<p>
-									<input type="checkbox" name="brand-bosch" id="brand-bosch" checked>
-									<label for="brand-bosch">BOSCH</label>
-								</p>
-								<p>
-									<input type="checkbox" name="brand-interskol" id="brand-interskol">
-									<label for="brand-interskol">Интерскол</label>
-								</p>
-								<p>
-									<input type="checkbox" name="brand-makita" id="brand-makita" checked>
-									<label for="brand-makita">Makita</label>
-								</p>
-								<p>
-									<input type="checkbox" name="brand-dewalt" id="brand-dewalt">
-									<label for="brand-dewalt">Dewalt</label>
-								</p>
-								<p>
-									<input type="checkbox" name="brand-hitachi" id="brand-hitachi">
-									<label for="brand-hitachi">Hitachi</label>
-								</p>
+							<fieldset class="filter-brands">
+								<h3>Производители:</h3>
+								<input type="checkbox" name="brand-bosch" id="brand-bosch" value="" checked>
+								<label for="brand-bosch">BOSCH</label>
+								<input type="checkbox" name="brand-interskol" id="brand-interskol" value="">
+								<label for="brand-interskol">Интерскол</label>
+								<input type="checkbox" name="brand-makita" id="brand-makita" value="" checked>
+								<label for="brand-makita">Makita</label>
+								<input type="checkbox" name="brand-dewalt" id="brand-dewalt" value="">
+								<label for="brand-dewalt">Dewalt</label>
+								<input type="checkbox" name="brand-hitachi" id="brand-hitachi" value="">
+								<label for="brand-hitachi">Hitachi</label>
 							</fieldset>
-							<fieldset class="power-supply-type">
+							<fieldset class="filter-power">
 								<h2>Питание:</h2>
-								<input type="radio" name="power-supply-type" id="battery-supply" checked>
+								<input type="radio" name="power-supply-type" id="battery-supply" value="" checked>
 								<label for="battery-supply">Аккумуляторные</label>
-								<input type="radio" name="power-supply-type" id="mains-supply">
+								<input type="radio" name="power-supply-type" id="mains-supply" value="">
 								<label for="mains-supply">Сетевые</label>
+								<a class="btn-filter" href="#">Показать</a>
 							</fieldset>
-							<input class="form-btn" type="submit" id="form-btn" name="form-btn" value="Показать">
 						</form>
 					</div>
-					<div class="catalog">
+					<div class="catalog-right">
 						<div class="sort-by">
-							<div class="sort-filters">
-								<span>Сортировка:</span>
+							<div class="catalog-top">
+								<span class="catalog-title" >Сортировка:</span>
 								<a class="sort-active" href="#">По цене</a>
 								<a href="#">По типу</a>
 								<a href="#">По функционалу</a>
@@ -121,19 +119,9 @@
 								<a class="arrow-down" href="#"></a>
 							</div>
 						</div>
-						<div class="catalog-items">
-							<div class="catalog-item">
-								<img src="#" alt="#">
-								<p>Перфоратор BOSCH BFG 9000</p>
-								<p>32 500 р.</p>
-								<a class="btn-red" href="#">25 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="catalog-item">
-								<img src="#" alt="">
+						<div class="catalog">
+							<div class="item">
+								<img src="img/bfg-3000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -142,8 +130,8 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item flag-new no-discount">
-								<img src="#" alt="">
+							<div class="item">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -152,8 +140,8 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item">
-								<img src="#" alt="">
+							<div class="item-new no-discount">
+								<img src="img/bfg-2000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -162,18 +150,8 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item flag-new no-discount">
-								<img src="#" alt="">
-								<p>Перфоратор BOSCH BFG 9000</p>
-								<p>32 500 р.</p>
-								<a class="btn-red" href="#">25 500 р.</a>
-								<div class="buy-item">
-									<a href="#">Купить</a>
-									<a href="#">В закладки</a>
-								</div>
-							</div>
-							<div class="catalog-item">
-								<img src="#" alt="">
+							<div class="item">
+								<img src="img/bfg-3000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 3000</p>
 								<p>22 500 р.</p>
 								<a class="btn-red" href="#">15 500 р.</a>
@@ -182,8 +160,8 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item flag-new no-discount">
-								<img src="#" alt="">
+							<div class="item-new no-discount">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -192,8 +170,8 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item">
-								<img src="#" alt="">
+							<div class="item">
+								<img src="img/bfg-2000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 2000</p>
 								<p>32 500 р.</p>
 								<a class="btn-red" href="#">12 500 р.</a>
@@ -202,8 +180,18 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-							<div class="catalog-item">
-								<img src="#" alt="">
+							<div class="item">
+								<img src="img/bfg-3000.jpg" alt="">
+								<p>Перфоратор BOSCH BFG 3000</p>
+								<p>22 500 р.</p>
+								<a class="btn-red" href="#">15 500 р.</a>
+								<div class="buy-item">
+									<a href="#">Купить</a>
+									<a href="#">В закладки</a>
+								</div>
+							</div>
+							<div class="item-new no-discount">
+								<img src="img/bfg-6000.jpg" alt="">
 								<p>Перфоратор BOSCH BFG 6000</p>
 								<p>30 500 р.</p>
 								<a class="btn-red" href="#">25 500 р.</a>
@@ -212,64 +200,118 @@
 									<a href="#">В закладки</a>
 								</div>
 							</div>
-						</div>
-						<div class="pagination">
-							<a class="page-btn current-page" href="#">1</a>
-							<a class="page-btn" href="#">2</a>
-							<a class="page-btn" href="#">3</a>
-							<a class="page-btn page-btn-next" href="#">Следующая</a>
+							<div class="item">
+								<img src="img/bfg-2000.jpg" alt="">
+								<p>Перфоратор BOSCH BFG 2000</p>
+								<p>32 500 р.</p>
+								<a class="btn-red" href="#">12 500 р.</a>
+								<div class="buy-item">
+									<a href="#">Купить</a>
+									<a href="#">В закладки</a>
+								</div>
+							</div>
+						<div class="catalog-nav">
+							<ul>
+								<li><a class="page-btn current-page" href="#">1</a></li>
+								<li><a class="page-btn" href="#">2</a></li>
+								<li><a class="page-btn" href="#">3</a></li>
+								<li><a class="btn-filter" href="#">Следующая</a></li>
+							</ul>>
 						</div>
 					</div>
 				</div>
-				</div>
-				</div>
-				<footer>
-					<div class="footer-contacts-navigation clearfix">
-						<div class="container">
-							<div class="footer-contacts">
-								<a class="logo" href="#">Техномарт</a>
-								<address>
-									г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
-									+7 (812) 555-05-55
-								</address>
-							</div>
-							<div class="footer-navigation">
-								<ul class="footer-nav-1">
-									<li><a href="#">Компания</a></li>
-									<li><a href="#">Новости</a></li>
-									<li><a href="#">Каталог</a></li>
-									<li><a href="#">Доставка</a></li>
-									<li><a href="#">Контакты</a></li>
-								</ul>
-								<ul class="footer-nav-2">
-									<li><a href="#">Материалы</a></li>
-									<li><a href="#">Техника</a></li>
-									<li><a href="#">Инструмент</a></li>
-									<li><a href="#">Спецпредложения</a></li>
-								</ul>
-							</div>
-						</div>
+			</div>
+		</div>
+		<footer>
+			<div class="footer-contacts-navigation clearfix">
+				<div class="container">
+					<div class="footer-contacts">
+						<a class="logo" href="#">Техномарт</a>
+						<address>
+							г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
+							+7 (812) 555-05-55
+						</address>
 					</div>
+					<div class="footer-navigation">
+						<ul class="footer-nav-1">
+							<li><a href="#">Компания</a></li>
+							<li><a href="#">Новости</a></li>
+							<li><a href="#">Каталог</a></li>
+							<li><a href="#">Доставка</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<ul class="footer-nav-2">
+							<li><a href="#">Материалы</a></li>
+							<li><a href="#">Техника</a></li>
+							<li><a href="#">Инструмент</a></li>
+							<li><a href="#">Спецпредложения</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="catalog-about">
+				<div class="conteiner">
+					<h2>Пара слов об Перфораторах</h2>
+					<p>
+						Перфоратор - универсальный строительный инструмент. Предназначен для сверления и долбления отверстий в кирпиче, бетоне и камне.<br>
+						Существуют электромеханические и пневматические перфораторы. Современные модели могу выполнять функции дрели, шуруповерта и отбойного молотка. В ассортиментном ряду есть выбор "Трехрежимников": В одно устройстве будут совмещатся отбойный молот и ударная дрель.
+					</p>
+				</div>
+			</div>
+			<footer class="main-footer">
+				<div class="footer-top">
+					<div class="footer-left">
+						<a class="logo" href="#">Техномарт</a>
+						<div class="footer-contacts"> <span>
+							г.Санкт-Петербург,ул.Б.Конюшенная,д19/8<br>
+							+7 (812) 555-05-55
+						</span>
+					</div>
+				</div>
+				<div class="footer-right">
+					<div class="footer-navigation">
+						<ul class="footer-nav-1">
+							<li><a href="#">Компания</a></li>
+							<li><a href="#">Новости</a></li>
+							<li><a href="#">Каталог</a></li>
+							<li><a href="#">Доставка</a></li>
+							<li><a href="#">Контакты</a></li>
+						</ul>
+						<ul class="footer-nav-2">
+							<li><a href="#">Материалы</a></li>
+							<li><a href="#">Техника</a></li>
+							<li><a href="#">Инструмент</a></li>
+							<li><a href="#">Спецпредложения</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="footrr-bottom">
+				<div class="footer-left">
+					<div class="container">
+						<p class="copyright">
+							2010-2016 Компания "Техномарт"<br>
+							Все права защищены
+						</p>
+					</div>
+				</div>
+				<div class="footer-right">
 					<div class="footer-socials">
-						<div class="container">
-							<p class="copyright">
-								2010-2016 Компания "Техномарт"<br>
-								Все права защищены
-							</p>
-							<div class="social-btns">
-								<a class="vk-btn" href="#">vk</a>
-								<a class="fb-btn" href="#">fb</a>
-								<a class="ig-btn" href="#">ig</a>
-							</div>
-							<p class="footer-feedback">
-								Обратная связь:<br>
-								<a href="#">mail@htmlacademy.ru</a>
-							</p>
-							<p>Разработано:</p>
-							<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+						<div class="social-btns">
+							<a class="vk-btn" href="#">vk</a>
+							<a class="fb-btn" href="#">fb</a>
+							<a class="ig-btn" href="#">ig</a>
+						</div>
+						<p class="footer-feedback">
+							Обратная связь:<br>
+							<a href="#">mail@htmlacademy.ru</a>
+						</p>
+						<p>Разработано:</p>
+						<a class="btn" href="https://htmlacademy.ru">HTML Academy></a>
 					</div>
 				</div>
-			</footer>
-		</body>
-		</html>
+			</div>
+		</footer>
+	</body>
+	</html>
 
